[gd_scene load_steps=16 format=3 uid="uid://b87w0iko5mguv"]

[ext_resource type="Script" uid="uid://lfcpa6pb0ipx" path="res://src/scripts/main.gd" id="1_5dlwx"]
[ext_resource type="Texture2D" uid="uid://cskixovt11rq7" path="res://src/assets/img/patanlla inicio.png" id="1_32aa5"]
[ext_resource type="Texture2D" uid="uid://m3th4wvul4ho" path="res://src/assets/img/semillita logo.png" id="2_5dlwx"]
[ext_resource type="PackedScene" uid="uid://dh6ai5b4yitfk" path="res://src/scenes/background/cloud.tscn" id="4_5dlwx"]
[ext_resource type="PackedScene" uid="uid://dwkyqi30tbpn2" path="res://src/scenes/background/cloud_2.tscn" id="4_o81g6"]
[ext_resource type="Texture2D" uid="uid://c33ydy7cxcmmy" path="res://src/assets/img/galery buttom.png" id="6_5lsyw"]
[ext_resource type="FontFile" uid="uid://dejnru75y2jx6" path="res://src/assets/fonts/flower/IndieFlower-Regular.ttf" id="6_kokaf"]
[ext_resource type="Texture2D" uid="uid://cvt32jll5lbeq" path="res://src/assets/img/start buttom.png" id="7_kokaf"]
[ext_resource type="Texture2D" uid="uid://d2j5axomep20b" path="res://src/assets/img/cargarpartida buttom.png" id="8_lp058"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_24j03"]
texture = ExtResource("6_5lsyw")
expand_margin_left = 25.0
expand_margin_top = 40.0
expand_margin_right = 25.0
expand_margin_bottom = 40.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p1ia5"]
texture = ExtResource("7_kokaf")
expand_margin_left = 25.0
expand_margin_top = 40.0
expand_margin_right = 25.0
expand_margin_bottom = 40.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kbdt0"]
texture = ExtResource("8_lp058")
expand_margin_left = 25.0
expand_margin_top = 30.0
expand_margin_right = 25.0
expand_margin_bottom = 30.0

[sub_resource type="Animation" id="Animation_5dlwx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Curtains:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_32aa5"]
resource_name = "curtains"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Curtains:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o81g6"]
_data = {
&"RESET": SubResource("Animation_5dlwx"),
&"curtains": SubResource("Animation_32aa5")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_5dlwx")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(579, 326)
scale = Vector2(0.56543, 0.603704)
texture = ExtResource("1_32aa5")

[node name="Ui" type="Node2D" parent="."]

[node name="Sky" type="Node2D" parent="Ui"]

[node name="Cloud" parent="Ui/Sky" instance=ExtResource("4_5dlwx")]
position = Vector2(738, 49)
velocidad = 3.0
distancia_limite = 3000.0

[node name="Cloud2" parent="Ui/Sky" instance=ExtResource("4_5dlwx")]
position = Vector2(392, 88)
velocidad = 10.0
distancia_limite = 3000.0

[node name="Cloud3" parent="Ui/Sky" instance=ExtResource("4_5dlwx")]
position = Vector2(-76, 108)
velocidad = 5.0
distancia_limite = 3000.0

[node name="Cloud7" parent="Ui/Sky" instance=ExtResource("4_5dlwx")]
position = Vector2(684, 296)
velocidad = 4.0
distancia_limite = 3000.0

[node name="Cloud8" parent="Ui/Sky" instance=ExtResource("4_5dlwx")]
position = Vector2(879, 176)
velocidad = 2.0
distancia_limite = 3000.0

[node name="Cloud4" parent="Ui/Sky" instance=ExtResource("4_5dlwx")]
position = Vector2(254, 219)
velocidad = 5.0
distancia_limite = 2000.0

[node name="Cloud5" parent="Ui/Sky" instance=ExtResource("4_o81g6")]
velocidad = 15.0
distancia_limite = 3000.0

[node name="Cloud6" parent="Ui/Sky" instance=ExtResource("4_o81g6")]
position = Vector2(-331, 60)
velocidad = 9.0
distancia_limite = 3000.0

[node name="Logo" type="Sprite2D" parent="Ui"]
position = Vector2(573, 248)
scale = Vector2(0.594852, 0.553066)
texture = ExtResource("2_5dlwx")

[node name="play" type="Button" parent="Ui"]
offset_left = 481.0
offset_top = 483.0
offset_right = 650.0
offset_bottom = 532.0
theme_override_fonts/font = ExtResource("6_kokaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_24j03")
text = "Jugar"

[node name="credits" type="Button" parent="Ui"]
offset_left = 484.0
offset_top = 540.0
offset_right = 644.0
offset_bottom = 591.0
theme_override_fonts/font = ExtResource("6_kokaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_p1ia5")
text = "Creditos"

[node name="quit" type="Button" parent="Ui"]
offset_left = 998.0
offset_top = 582.0
offset_right = 1130.0
offset_bottom = 629.0
theme_override_fonts/font = ExtResource("6_kokaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_kbdt0")
text = "Salir"

[node name="Curtains" type="ColorRect" parent="."]
offset_right = 1161.0
offset_bottom = 657.0
mouse_filter = 2

[node name="Curtains_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o81g6")
}

[connection signal="pressed" from="Ui/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Ui/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Ui/quit" to="." method="_on_quit_pressed"]
